[package]
name = "esp32c3-example"
version = "0.1.0"
authors = ["bjoernQ <bjoern.quentin@mobile-j.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32c2-hal = { version = "0.5.1" }
esp-backtrace = { version = "0.5.0", features = ["esp32c2", "panic-handler", "print-uart"] }
esp-serial-dbg = { path = "../esp-serial-dbg", features = ["esp32c2"] }
esp-println = { version = "0.3.0", features = ["esp32c2"]}
critical-section = "1.1.0"
