[package]
name = "esp32c3-example"
version = "0.1.0"
authors = ["bjoernQ <bjoern.quentin@mobile-j.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32c3-hal = { package = "esp32c3-hal", git = "https://github.com/esp-rs/esp-hal.git" }
esp-backtrace = { git = "https://github.com/esp-rs/esp-backtrace", features = ["esp32c3", "panic-handler", "print-uart"] }
riscv-rt = { version = "0.9", optional = true }
esp-serial-dbg = { path = "/projects/esp/esp-serial-dbg/esp-serial-dbg", features = ["esp32c3"] }
esp-println = { version = "0.2.1", features = ["esp32c3"]}
riscv = "0.8.0"

[features]
default = ["rt"]
rt = ["riscv-rt"]
