[package]
name = "esp32c3-example"
version = "0.1.0"
authors = ["bjoernQ <bjoern.quentin@mobile-j.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32c3-hal = { version = "0.7.0" }
esp-backtrace = { version = "0.6.0", features = ["esp32c3", "panic-handler", "print-uart"] }
esp-serial-dbg = { path = "../esp-serial-dbg", features = ["esp32c3"] }
esp-println = { version = "0.4.0", features = ["esp32c3"]}
critical-section = "1.1.0"
