[package]
name = "esp32s3_example"
version = "0.1.0"
authors = ["bjoernQ <bjoern.quentin@mobile-j.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32s3-hal = { version = "0.7.0" }
esp-backtrace = { version = "0.5.0" , features = ["esp32s3", "panic-handler", "print-uart"] }
esp-println = { version = "0.3.0", features = ["esp32s3"]}
esp-serial-dbg = { path = "../esp-serial-dbg", features = ["esp32s3"] }
