[package]
name = "espdbg"
version = "0.1.0"
edition = "2021"
authors = [
    "Björn Quentin <bjoern.quentin@mobile-j.de>",
]
description = "Debugging ESP32 chips via serial"
license     = "MIT OR Apache-2.0"

[dependencies]
serialport = "4.2.0"
rustyline = "10.0.0"
parse_int = "0.6.0"
hexdump = "0.1.1"
gdbstub = "0.6.2"
env_logger = "0.9.0"
log = "0.4.17"
clap = { version = "3.2.16", features = [ "derive" ] }
